[package]
name = "day07"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#grid = { path = "../grid/" }
utils = { path = "../utils" }
itertools = "0.10.1"       # Extra iterator adaptors, iterator methods, free functions, and macros.

#rayon = "1.6.0"  # Parallel

#nom = "7.1.1" # Parser

#derive_builder = "0.12.0"
#cached = "0.40.0"          # Caching structures and simplified function memoization
#array2d = "0.2.1"
#glam = "0.20.1"
#lazy_static = "1.4.0"      # A macro for declaring lazily evaluated statics in Rust.
#image = "0.23.14"          # image processing
#regex = "1.7.0"
#counter = "0.5.2"
#petgraph = "0.6.0"         # Graph data structure library. Provides graph types and graph algorithms.
#bitvec = "0.22.3"

#num = "0.4"
#num-traits = "0.2"
#num-derive = "0.3.3"

#ndarray = "0.15.4"

#regex = "1.5.4"            # An implementation of regular expressions for Rust. This implementation uses finite automata and g…
#rand = "0.8.4"             # Random number generators and other randomness functionality.

#num-complex = "0.4.0"      # complex numbers
#coord2d = "0.2.7"          # rust lib for coordinate in 2d system
#ndarray = "0.15.4"         # n dimensional arrays
#ndarray-linalg = "0.14.1"  # lin algo for ndarray
#ndarray-npy = "0.8.1"      # statistics for ndarray

#serde = "1.0.130"          # A generic serialization/deserialization framework


#curl = "0.4"
#chrono = "0.4"
#fnv = "1.0"
#ahash = "0.7"
#fxhash = "0.2"
#bitvec = "0.22"

#intervallum = "1.3.0"
#gcollections = "1.5.0"
