[package]
name = "day09"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid = { path = "../grid/" }
utils = { path = "../utils" }
itertools = "0.10.1"       # Extra iterator adaptors, iterator methods, free functions, and macros.
derive_more = "0.99"
fxhash = "0.2"   # Fast FxHashMap, FxHashSet


#derive_builder = "0.12.0"
#cached = "0.40.0"          # Caching structures and simplified function memoization
#array2d = "0.2.1"
#glam = "0.20.1"            # glam is a simple and fast linear algebra library for games and graphics. Features. f32 types. vectors: Vec2 , Vec3 , Vec3A and Vec4
#lazy_static = "1.4.0"      # A macro for declaring lazily evaluated statics in Rust.
image = "0.24.5"          # image processing
gif = "0.12.0"
#regex = "1.7.0"
#counter = "0.5.2"
#petgraph = "0.6.0"         # Graph data structure library. Provides graph types and graph algorithms.
#bitvec = "0.22.3"

#num = "0.4"
#num-traits = "0.2"
#num-derive = "0.3.3"

#im-rc = "15.1.0"              # This library implements several of the more commonly useful immutable data structures for Rust. (the fast but not thread safe version)
#im = "15.1.0"                 # This library implements several of the more commonly useful immutable data structures for Rust.

#ndarray = "0.15.4"         # n dim array

#regex = "1.5.4"            # An implementation of regular expressions for Rust. This implementation uses finite automata and g…
#rand = "0.8.4"             # Random number generators and other randomness functionality.

#num-complex = "0.4.0"      # complex numbers
#coord2d = "0.2.7"          # rust lib for coordinate in 2d system
#ndarray = "0.15.4"         # n dimensional arrays
#ndarray-linalg = "0.14.1"  # lin algo for ndarray
#ndarray-npy = "0.8.1"      # statistics for ndarray

#rayon = "1.6.0"            # Parallel
#nom = "7.1.1"              # Parser

#serde = "1.0.130"          # A generic serialization/deserialization framework

#curl = "0.4"
#chrono = "0.4"
#fnv = "1.0"
#ahash = "0.8.2"
#bitvec = "0.22"

#intervallum = "1.3.0"
#gcollections = "1.5.0"
