[package]
name = "grid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
derive_more = "0.99"

itertools = "0.10.1"       # Extra iterator adaptors, iterator methods, free functions, and macros.
#num-traits = "0.2"
#num-derive = "0.3.3"
